Update UAT Space Program 1.html

--- a/UAT Space Program 1.html
+++ b/UAT Space Program 1.html
@@ -95,6 +95,20 @@ function playCraps() {
         <br>
         <br>
         <p id = "Countdown Timer"> Initiating Countdown Sequence</p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <a href = "index.html">
+            <button>
+                LANDING PAGE
+            </button>
+        </a>
+        <a href = "Board of Objectives.html">
+            <button>
+                BOARD OF OBJECTIVES
+            </button>
+        </a>
         
     </body>
 
